--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,41 +1,41 @@
 {
     "system": {
-        "name": "InfoTech+",
-        "url": "https://infotechpluscariri.com.br",
+        "name": "Fale Conosco",
+        "url": "https://faleconosco.cc",
         "color": {
             "lightTheme": {
                 "palette": {
-                    "primary": "#181d22",
-                    "secondary": "#7B68EE",
-                    "default": "#A9A9A9"
+                    "primary": "#404040",
+                    "secondary": "#037682",
+                    "default": "#EFF1ED"
                 },
                 "toolbar": {
-                    "background": "linear-gradient(to right, #181d22, #7B68EE)"
+                    "background": "linear-gradient(to right, #404040, #037682)"
                 },
-                "menuItens": "#DCDCDC",
-                "sub": "#DCDCDC",
-                "toolbarIcon": "#DCDCDC",
-                "divide": "#DCDCDC"
+                "menuItens": "#EFF1ED",
+                "sub": "#EFF1ED",
+                "toolbarIcon": "#EFF1ED",
+                "divide": "#EFF1ED"
             },
             "darkTheme": {
                 "palette": {
-                    "primary": "#181d22",
+                    "primary": "#404040",
                     "secondary": "#7B68EE",
                     "background": {
                         "default": "#080d14",
-                        "paper": "#181d22"
+                        "paper": "#404040"
                     },
                     "text": {
                         "primary": "#4169E1",
-                        "secondary": "#DCDCDC"
+                        "secondary": "#EFF1ED"
                     }
                 },
                 "toolbar": {
-                    "background": "linear-gradient(to right, #181d22, #7B68EE)"
+                    "background": "linear-gradient(to right, #404040, #037682)"
                 },
-                "menuItens": "#181d22",
-                "sub": "#181d22",
-                "toolbarIcon": "#181d22",
+                "menuItens": "#404040",
+                "sub": "#404040",
+                "toolbarIcon": "#404040",
                 "divide": "#080d14"
             }
         }
