novo envio de logos

--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,6 +1,6 @@
 {
     "system": {
-        "name": "Fale Conosco",
+        "name": "Fale Conosco - Plataforma de Multi Atendimento para Whatsapp",
         "url": "https://faleconosco.cc",
         "color": {
             "lightTheme": {
