atualização de logos

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "InfoTicket+",
-	"name": "InfoTicket+",
+	"short_name": "Proxigma.me",
+	"name": "Proxigma.me",
 	"icons": [
 		{
 			"src": "favicon.ico",
