--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -6,7 +6,7 @@
             "lightTheme": {
                 "palette": {
                     "primary": "#404040",
-                    "secondary": "#037682",
+                    "secondary": "#f60000",
                     "default": "#EFF1ED"
                 },
                 "toolbar": {
