atualização do manifest e do index

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "Proxigma.me",
-	"name": "Proxigma.me",
+	"short_name": "Fale Conosco",
+	"name": "Fale Conosco",
 	"icons": [
 		{
 			"src": "favicon.ico",
